--- a/client/package.json
+++ b/client/package.json
@@ -2,34 +2,29 @@
   "name": "mern-stack-client",
   "version": "0.1.0",
   "private": true,
-  "proxy": "https://localhost:5000",
-  "type": "module",
+  "proxy": "http://localhost:5000",
   "dependencies": {
     "@material-ui/core": "^4.12.4",
-    "@material-ui/icons": "^4.9.1",
-    "@material-ui/lab": "^4.0.0-alpha.58",
-    "@mui/material": "^5.14.19",
+    "@material-ui/icons": "^4.11.3",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
-    "axios": "^1.6.2",
-    "git": "^0.1.5",
+    "axios": "^0.19.2",
     "jwt-decode": "^3.1.2",
-    "material-ui-chip-input": "^1.1.0",
     "moment": "^2.27.0",
-    "react": ">=16.8.0",
+    "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-file-base64": "^1.0.3",
     "react-google-login": "^5.1.25",
-    "react-redux": "^7.2.9",
+    "react-redux": "^7.1.3",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "^5.0.1",
+    "react-scripts": "3.4.1",
     "redux": "^4.2.1",
     "redux-thunk": "^2.3.0"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
+    "start": "react-scripts --openssl-legacy-provider start",
+    "build": "react-scripts --openssl-legacy-provider build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
@@ -49,19 +44,10 @@
     ]
   },
   "devDependencies": {
-    "@redux-devtools/core": "^3.9.0",
-    "@redux-devtools/dock-monitor": "^1.4.0",
-    "@redux-devtools/log-monitor": "^2.3.0",
     "eslint-config-airbnb": "^18.2.1",
-    "eslint-config-react-app": "^7.0.1",
     "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-jsx-a11y": "^6.4.1",
     "eslint-plugin-react": "^7.21.5",
     "eslint-plugin-react-hooks": "^4.2.0"
-  },
-  "description": "This project was bootstrapped with [Create React App](https://github.com/facebook/create-react-app).",
-  "main": "index.js",
-  "keywords": [],
-  "author": "",
-  "license": "ISC"
+  }
 }
