--- a/client/package.json
+++ b/client/package.json
@@ -4,20 +4,24 @@
   "private": true,
   "proxy": "http://localhost:5000",
   "dependencies": {
-    "@material-ui/core": "^4.12.4",
+    "@material-ui/core": "^4.5.1",
     "@material-ui/icons": "^4.11.3",
+    "@material-ui/lab": "^4.0.0-alpha.61",
+    "@react-oauth/google": "^0.12.1",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "axios": "^0.19.2",
+    "gapi-script": "^1.2.0",
     "jwt-decode": "^3.1.2",
     "moment": "^2.27.0",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-file-base64": "^1.0.3",
-    "react-google-login": "^5.1.25",
+    "react-google-login": "^5.2.2",
+    "react-icons": "^5.0.1",
     "react-redux": "^7.1.3",
-    "react-router-dom": "^5.2.0",
+    "react-router-dom": "^5.3.4",
     "react-scripts": "3.4.1",
     "redux": "^4.2.1",
     "redux-thunk": "^2.3.0"
